Add Netlify config and diagnostics logging

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "diagnose": "node scripts/diagnostics.cjs"
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
@@ -18,6 +19,7 @@
     "sharp": "^0.34.5"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
